Add offset contributed to sticky position box rect by location containers

Tables are constructed using locationContainers which do not serve as the
containing block but do offset the element. These need to be included in the
sticky position offsets in the constraints.

BUG=673538
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2646133002
Cr-Commit-Position: refs/heads/master@{#446155}

Former-commit-id: 686dbbef585fd2064f1a2a3451b90e501936a589